# cc-gateway

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  OPENCLAW_COMPARISON.md  Plans.md  README.md  cc-gateway.toml  cc-gateway.toml.example  docker-compose.yml  install.sh  mcp.json.example  schedule.toml.example
.github/workflows/: ci.yml  release.yml
crates/cc-api/: Cargo.toml
crates/cc-api/src/: error.rs  handlers.rs  lib.rs  routes.rs  server.rs
crates/cc-api/src/middleware/: auth.rs  mod.rs  rate_limit.rs
crates/cc-browser/: Cargo.toml
crates/cc-browser/src/: error.rs  lib.rs  session.rs  tools.rs
crates/cc-calendar/: Cargo.toml
crates/cc-calendar/src/: client.rs  error.rs  lib.rs  models.rs
crates/cc-contacts/: Cargo.toml
crates/cc-contacts/src/: client.rs  error.rs  lib.rs  models.rs
crates/cc-core/: Cargo.toml  README.md
crates/cc-core/benches/: memory_benchmark.rs  session_benchmark.rs
crates/cc-core/src/: config.rs  error.rs  lib.rs
crates/cc-core/src/agents/: default.rs  delegation.rs  manager.rs  mod.rs  types.rs
crates/cc-core/src/audit/: crypto.rs  error.rs  logger.rs  mod.rs  types.rs
crates/cc-core/src/llm/: client.rs  mod.rs  types.rs
crates/cc-core/src/memory/: mod.rs  store.rs  types.rs
crates/cc-core/src/session/: manager.rs  mod.rs  store.rs  types.rs
crates/cc-core/src/skills/: loader.rs  mod.rs  types.rs
crates/cc-core/src/tool/: definition.rs  manager.rs  mod.rs  traits.rs
crates/cc-dashboard/: Cargo.toml
crates/cc-dashboard/src/: api.rs  error.rs  lib.rs  server.rs
crates/cc-discord/: Cargo.toml
crates/cc-discord/src/: bot.rs  error.rs  handler.rs  lib.rs  session.rs
crates/cc-discord/src/commands/: ask.rs  clear.rs  help.rs  mod.rs
crates/cc-email/: Cargo.toml
crates/cc-email/src/: error.rs  lib.rs  receive.rs  send.rs  tools.rs
crates/cc-facebook/: Cargo.toml
crates/cc-facebook/src/: api.rs  error.rs  handler.rs  lib.rs  session.rs
crates/cc-gateway/: Cargo.toml
crates/cc-gateway/src/: cli.rs  error.rs  main.rs
crates/cc-imessage/: Cargo.toml
crates/cc-imessage/src/: bot.rs  error.rs  handler.rs  lib.rs  script.rs  session.rs  watcher.rs
crates/cc-instagram/: Cargo.toml
crates/cc-instagram/src/: api.rs  error.rs  handler.rs  lib.rs  session.rs
crates/cc-line/: Cargo.toml
crates/cc-line/src/: api.rs  bot.rs  error.rs  handler.rs  lib.rs  session.rs  types.rs  webhook.rs
crates/cc-mcp/: Cargo.toml  README.md
crates/cc-mcp/src/: adapter.rs  client.rs  config.rs  lib.rs  registry.rs
crates/cc-schedule/: Cargo.toml
crates/cc-schedule/src/: config.rs  error.rs  lib.rs  scheduler.rs
crates/cc-signal/: Cargo.toml
crates/cc-signal/src/: api.rs  bot.rs  error.rs  handler.rs  lib.rs  session.rs  types.rs
crates/cc-slack/: Cargo.toml
crates/cc-slack/src/: api.rs  bot.rs  error.rs  handler.rs  lib.rs  session.rs  socket.rs  types.rs
crates/cc-telegram/: Cargo.toml
crates/cc-telegram/src/: bot.rs  commands.rs  error.rs  lib.rs  session.rs
crates/cc-tools/: Cargo.toml  README.md
crates/cc-tools/src/: bash.rs  edit.rs  glob.rs  grep.rs  lib.rs  read.rs  web_fetch.rs  web_search.rs  write.rs
crates/cc-voice/: Cargo.toml
crates/cc-voice/src/: error.rs  lib.rs  tts.rs  whisper.rs
crates/cc-whatsapp/: Cargo.toml
crates/cc-whatsapp/src/: bot.rs  error.rs  lib.rs  session.rs  twilio.rs  webhook.rs
crates/cc-ws/: Cargo.toml
crates/cc-ws/src/: error.rs  handler.rs  lib.rs  message.rs  server.rs  session.rs
crates/cc-ws/static/: index.html
docs/: index.md
docs/developer-guide/: architecture.md  custom-tools.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/operations/: troubleshooting.md
docs/reference/: environment-variables.md  faq.md
docs/user-guide/: browser.md  calendar.md  cli.md  contacts.md  mcp.md  scheduler.md  security.md  skills.md  sub-agents.md  tools.md
docs/user-guide/channels/: README.md  discord.md  email.md  facebook.md  imessage.md  instagram.md  line.md  signal.md  slack.md  telegram.md  twitter.md  voice.md  websocket.md  whatsapp.md
homebrew/Formula/: cc-gateway.rb
scripts/: smoke-test.sh
