[workspace]
resolver = "2"
members = [
    "crates/cc-core",
    "crates/cc-tools",
    "crates/cc-mcp",
    "crates/cc-schedule",
    "crates/cc-discord",
    "crates/cc-telegram",
    "crates/cc-whatsapp",
    "crates/cc-imessage",  # iMessage gateway (macOS only)
    "crates/cc-signal",    # Signal gateway
    "crates/cc-slack",     # Slack gateway
    "crates/cc-line",      # LINE gateway
    "crates/cc-browser",
    "crates/cc-voice",     # Voice/Audio (Whisper, TTS)
    "crates/cc-dashboard", # Web dashboard
    "crates/cc-email",
    "crates/cc-api",
    "crates/cc-ws",       # WebSocket gateway
    "crates/cc-gateway",  # main binary
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Claude Code User"]
license = "MIT"
repository = "https://github.com/user/cc-gateway"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client & server
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"], default-features = false }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
http = "1"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
axum-extra = { version = "0.10", features = ["typed-header"] }

# Discord
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
poise = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# MCP
rmcp = { version = "0.16", features = ["client", "transport-child-process"] }

# Scheduling
cron = "0.15"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
regex = "1"
glob = "0.3"
grep = "0.3"  # ripgrep library
dashmap = "5.5"  # Concurrent map
reedline = "0.38"  # CLI readline with completion and menus (nushell)
nu-ansi-term = "0.50"  # ANSI colors for reedline
crossterm = "0.28"  # Terminal manipulation
base64 = "0.22"
mime = "0.3"

# Configuration
config = "0.15"
dotenvy = "0.15"

# Benchmarking
criterion = "0.5"

# Internal crates
cc-core = { path = "crates/cc-core" }
cc-tools = { path = "crates/cc-tools" }
cc-mcp = { path = "crates/cc-mcp" }
cc-schedule = { path = "crates/cc-schedule" }
cc-discord = { path = "crates/cc-discord" }
cc-telegram = { path = "crates/cc-telegram" }
cc-whatsapp = { path = "crates/cc-whatsapp" }
cc-imessage = { path = "crates/cc-imessage" }
cc-signal = { path = "crates/cc-signal" }
cc-slack = { path = "crates/cc-slack" }
cc-line = { path = "crates/cc-line" }
cc-browser = { path = "crates/cc-browser" }
cc-email = { path = "crates/cc-email" }
cc-api = { path = "crates/cc-api" }

# Release profile optimizations
[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

# Profile for development with some optimizations
[profile.dev-release]
inherits = "release"
lto = false
codegen-units = 16
debug = 1

# Profile for testing with optimizations
[profile.test-release]
inherits = "release"
lto = false
opt-level = 2
debug = 1
