[package]
name = "cc-browser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true

# Core
cc-core.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Browser automation
headless_chrome = "1.0"

# Image processing (for screenshots)
base64.workspace = true

[dev-dependencies]
tempfile = "3"
