[package]
name = "cc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# HTTP
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
rusqlite.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true
base64 = "0.22"

# Configuration
toml.workspace = true
config.workspace = true
dotenvy.workspace = true

# YAML support for skills
serde_yaml = "0.9"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
criterion.workspace = true

[[bench]]
name = "session_benchmark"
harness = false

[[bench]]
name = "memory_benchmark"
harness = false
