[package]
name = "cc-email"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true

# Core
cc-core.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
chrono.workspace = true

[features]
default = []
# Enable full SMTP support with lettre
smtp = ["lettre"]
# Enable full IMAP support
imap = []

[dependencies.lettre]
version = "0.11"
default-features = false
features = ["smtp-transport", "builder", "tokio1", "tokio1-native-tls"]
optional = true
