[package]
name = "cc-line"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true

# Core
cc-core.workspace = true

# HTTP client & server
reqwest.workspace = true
axum.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
