[package]
name = "cc-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Core
cc-core.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# File operations
regex.workspace = true
glob.workspace = true
grep.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
