[package]
name = "cc-voice"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true

# HTTP client
reqwest.workspace = true

# Core
cc-core.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Audio encoding/decoding
base64.workspace = true

[dev-dependencies]
tokio-test = "0.4"
