[package]
name = "cc-whatsapp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true

# Core
cc-core.workspace = true

# HTTP
reqwest.workspace = true
axum.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Crypto for webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
chrono.workspace = true
