[package]
name = "cc-ws"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Core
cc-core.workspace = true

# HTTP & WebSocket
axum = { workspace = true, features = ["ws"] }
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio-tungstenite.workspace = true
http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
